fixed typos in example and added header

--- a/documentation/examples/loblibdemo.tex
+++ b/documentation/examples/loblibdemo.tex
@@ -27,6 +27,8 @@
 \today \\
 }
 
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \renewcommand{\coursename}{ Algorithms  }
@@ -35,9 +37,15 @@
 \renewcommand{\netid}{bae43}
 \renewcommand{\today}{September 12, 2013}
 \renewcommand{\hwnum}{1}
-\renewcommand{\hwtitle}{Matchings }
+\renewcommand{\hwtitle}{NP-Completeness }
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\fancyhead[L]{\lobclaw{simple}\vspace{-1.5mm}\coursenumber HW\hwnum: \textit{\hwtitle}}
+\fancyhead[R]{\name - \netid}
 
 
 \title{\coursename}
