fixed issue #1, updated spec to match readme, removed unneeded files

--- a/documentation/loblib_overview.tex
+++ b/documentation/loblib_overview.tex
@@ -8,10 +8,8 @@
 \usepackage{multicol}
 \usepackage{empheq}
 
-
 \usepackage{verbatim}
 \usepackage{comment}
-
 
 %no indent
 \setlength\parindent{0pt}
@@ -19,8 +17,6 @@
 \setlength{\topmargin}{-.5in}
 \setlength{\textheight}{9in}
 \setlength{\textwidth}{6.25in}
-
-
 \begin{document}
 \vspace*{-3cm}			
 \hspace*{-0.5cm}		
@@ -43,8 +39,8 @@
 
 
 \textit{Bryce Evans} \\
-\textit{May $23^{th}$, 2013}\\
-Version $\alpha\, 0.12$ \\
+\textit{February $5^{th}$, 2014}\\
+Version $\alpha\, 0.14$ \\
 
 
 
@@ -140,9 +136,9 @@ Smaller items may be used as bullets:
 
 \begin{multicols}{2} 
 \begin{itemize}
-\item[\lobclaw{claw_simple}] Item 1
-\item[\lobclaw{claw_simple}] Item 2
-\item[\lobclaw{claw_simple}] Item 3
+\item[\lobclaw{simple}] Item 1
+\item[\lobclaw{simple}] Item 2
+\item[\lobclaw{simple}] Item 3
 \end{itemize}
 
 \begin{itemize}
@@ -236,17 +232,11 @@ x^2 + x^2 &= x^2 + xy\\
 \lob{90}
 \lob{91}
 
-\subsection*{92, claw, clawsimple, 29}
+\subsection*{92, (claw) big, (claw) simple, 29}
 \lob{92}
 
-
-
-\lobclaw{claw}
-\lobclaw{claw_simple}
+\lobclaw{big}
+\lobclaw{simple}
 \lob{29}
-
-
-
-
 
 \end{document}
