--- a/loblib.sty
+++ b/loblib.sty
@@ -62,6 +62,7 @@
 
 %%%%%%%%%%%%
 
+
 \definecolor{crimson}{rgb}{.5,0.0,0}
 \definecolor{darkblue}{rgb}{0,0.0,0.3}
 \definecolor{darknavy}{rgb}{0,0.0,0.1}
@@ -69,11 +70,14 @@
 \definecolor{darkgrey}{rgb}{0.3,0.3,0.3}
 \definecolor{smokeblue}{rgb}{0.4,0.55,0.6}
 \definecolor{lobblue}{rgb}{0.35,0.4,0.45}
+\definecolor{lobteal}{rgb}{0.0,0.75,.9}
+\definecolor{lobgreen}{rgb}{0.0,1,0.5}
 \definecolor{shadow}{rgb}{0.85,0.85,0.85}
 
 
-\RequirePackage[scale=2,color=lobblue!10,angle=0,pages=some,placement=bottom]{background}
-\SetBgContents{\hspace{4cm}\lob{84}}
+\RequirePackage[scale=2,color=lobblue!10,angle=0,pages=some,position={6cm,-10cm}]{background}
+\SetBgContents{\lob{84}}
+\newcommand{\lobwatermark}{\BgThisPage}
 
 % for reference
 %\newcommand{\example}[2][YYY]{Mandatory arg: #2;
@@ -150,7 +154,7 @@
 
 
 %% Adds a big old blue lobster to the bottom
-%% right of a page
+%% right of a \
 \newcommand{\wiselob}{
     \vspace*{.7cm}
 \hspace*{9cm} 
@@ -160,7 +164,7 @@
 }
 
 %% Not implemented- shortcut for adding watermarks
-\newcommand{\lobwatermark}[1][]{
+%\newcommand{\lobwatermark}[1][]{
 %\ifx&#1&%
   % parameter not given
   
@@ -168,10 +172,12 @@
   % parameter given
 
   % working sets:
+  %\bg@material
   % \hspace{4cm}\lob{83}
 %\fi
-\SetBgContents{#1}
-}
+%\SetBgContents{#1}
+
+%}
 
 %% Adds a small claw in place of \blacksquare
 \newcommand{\lobtomb}{\lobclaw{simple}}
