fixed \lobwatermark command and updated documentation on watermarks

--- a/documentation/loblib_overview.tex
+++ b/documentation/loblib_overview.tex
@@ -12,7 +12,6 @@
 \usepackage{verbatim}
 \usepackage{comment}
 
-
 %no indent
 \setlength\parindent{0pt}
 \setlength{\oddsidemargin}{.125in}
@@ -176,8 +175,6 @@ x^2 + x^2 &= x^2 + xy\\
 2&= 1 \quad \lobclaw{simple}
 \end{align*}
 
-
-
 \end{multicols}
 
 \section*{Watermarks}
@@ -185,7 +182,7 @@ Add a lobster watermark to any page with \texttt{\textbackslash lobwatermark}.
 
 \textsc{Note:} Utilizes the \texttt{background} package and causes a conflict if the package settings are changed.
 
-%\lobwatermark
+\lobwatermark
 
 \pagebreak
 \section*{Full List:}
