--- a/loblib.sty
+++ b/loblib.sty
@@ -77,11 +77,7 @@
 
 \RequirePackage[scale=2,color=lobblue!10,angle=0,pages=some,position={6cm,-10cm}]{background}
 \SetBgContents{\lob{84}}
-\newcommand{\lobwatermark}{\BgThisPage}
-
-% for reference
-%\newcommand{\example}[2][YYY]{Mandatory arg: #2;
-%                                 Optional arg: #1.}
+\newcommand{\lobwatermark}{\BgThispage}
 
 %% Define the directory
 \newcommand{\dir}{objects/}
