--- a/documentation/examples/loblibdemo.tex
+++ b/documentation/examples/loblibdemo.tex
@@ -58,8 +58,7 @@
 \lobtitle
 \info
 
-%\lobwatermark
-%\BgThisPage
+\lobwatermark
 
 \section{Near Cliques}
 
@@ -136,6 +135,7 @@ The construction of $\tau$ is trivial - the output of $\sigma$ is equivalent to 
 &\textbf{Total Reduction Runtime: } &O(1)\\
 \end{align*}
 
+
 \subsection{Efficient Verifier:}
 Given a solution set $S$ of $k$ elements to the near clique problem, remove $v_1,v_2$ and corresponding edges. Take this graph and verify that each node has an edge to every other node. If every node connects to all others, the algorithm should have returned \texttt{True}, and if not, then \texttt{False}. \\
 
@@ -149,7 +149,7 @@ Given a solution set $S$ of $k$ elements to the near clique problem, remove $v_1
 \lobsectionbreak
 
 \section{Submatrix Domination}
-\BgThispage
+\lobwatermark
 
 \subsection{Solution}
 
@@ -166,7 +166,7 @@ Permute the columns so that the taken columns are consecutive. This is an isomor
 Because of the properties of this adjacency matrix, diagonals are the highest values in the matrices because no other value can be $>1$, meaning diagonals cannot be dominated by anything but another value in the diagonal. This forces no node to be accidentally paired up with another node by domination. For all diagonal values of $M_k$ to be dominated in $M_G$, the diagonals must align to each other, as no value in $M_G$ other than a diagonal is $\geq 2$. \\
 
 
-Because of the properties of adjacency matrices, if every value in the matrix is a 1 (excluding diagonal), then every node in that set is connected to all others in the set. Therefore, the mapping of $r(\cdot),c(\cdot)$ returns the set of nodes that form the clique. If $M_G$ contains $M_k$, then $G$ contains the clique and the algorithm returns \texttt{True}. It is guaranteed that if such a submatrix is found that it is a clique because the matrix must be centered on the diagonal, with each node the columns represent being connected to each other. If the submatrix is found within $M_G$ then, the clique exists within $G$. \lobtomb  \BgThispage \\
+Because of the properties of adjacency matrices, if every value in the matrix is a 1 (excluding diagonal), then every node in that set is connected to all others in the set. Therefore, the mapping of $r(\cdot),c(\cdot)$ returns the set of nodes that form the clique. If $M_G$ contains $M_k$, then $G$ contains the clique and the algorithm returns \texttt{True}. It is guaranteed that if such a submatrix is found that it is a clique because the matrix must be centered on the diagonal, with each node the columns represent being connected to each other. If the submatrix is found within $M_G$ then, the clique exists within $G$. \lobtomb  \lobwatermark \\
  
 
 
@@ -255,7 +255,7 @@ Given a solution set $S$ to the submatrix domination problem, test all values of
 
 \subsection{Solution}
 
-\BgThispage
+\lobwatermark
 
 Prove: \textit{Vertex Cover} $\leq_p$ \textit{Party Invitation Problem}\\
 
