fixed watermark anchoring

--- a/loblib.sty
+++ b/loblib.sty
@@ -75,7 +75,7 @@
 \definecolor{shadow}{rgb}{0.85,0.85,0.85}
 
 
-\RequirePackage[scale=2,color=lobblue!10,angle=0,pages=some,position={6cm,-10cm}]{background}
+\RequirePackage[scale=2,color=lobblue!10,angle=0,pages=some,anchor = below, placement=bottom]{background}
 \SetBgContents{\lob{84}}
 \newcommand{\lobwatermark}{\BgThispage}
 
